fix the scrolling issue by removing overflow-x - hidden in the css

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden; /* Prevent horizontal overflow */
+  /* overflow-x: hidden; */
   background: #161513;
   color: white;
 }
